samples/_failures_safe/1761619378_3b9eb2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed5e21fb.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_ed5e21fb.c:163:17: error: expected declaration or statement at end of input
  163 |                 break;
      |                 ^~~~~
./samples/SAFE/__tmp_ed5e21fb.c:163:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ed5e21fb.c:163:17: error: expected declaration or statement at end of input
